2002-12-27  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: -[GormDocument parseHeader:] corrected problem
	pointed out be Enrico Sersale.   Applied patch.  Thanks!
	
2002-12-21  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Added code in loadDocument: to create an empty
	dictionary for custom classes.  Corrected problem in createClassFiles:
	which prevented writing files when the class wasn't being edited.
	General cleanup.
	
2002-12-15  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Changed NSLog to NSDebugLog.
	* GormCustomClassInspector.m: Changed NSLog calls to NSDebugLog.
	* GormDocument.m: Changed NSLog calls to NSDebugLog where appropriate.
	* GormOutlineView.m: removed some uneeded NSLog calls.
	
2002-12-15  Gregory John Casamento <greg_casamento@yahoo.com>
	
	* Gorm.m: Minor cleanup.
	* GormClassManager.[hm]: Added method to get all superclasses
	of a given class.  Moved the "correctClassName" method which maps
	names of internal classes to thier external exquivalents.
	* GormCustomClassInspector.m: Made changes to call new class method
	in GormClassManager.
	* GormDocument.m: Minor cleanup.  Addition of _selectClass method
	which will cause the classes view to show the class of the instance
	currently selected in the object view.

2002-12-14  Pierre-Yves Rivaille  <pyrivail@ens-lyon.fr>

	* GormViewEditor.m
	* GormInternalViewEditor.m
	* GormViewWithContentViewEditor.m
	Multiple selection through mouse dragging is back.
	When attempting to start a connection, make sure the current
	widget is selected.


2002-12-06  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Added code to scroll to the class name
	when the subclassing or changing the class name.
	
2002-12-05  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.[mh]: Added method named
	-[GormDocument renameConnectionsForClassNamed:toName:]